# md2gdoc

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/: md2gdoc.md
md2gdoc/: __init__.py  __main__.py  auth.py  engine.py  parser.py  styles.py
