[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "md2gdoc"
version = "0.1.0"
description = "Convert Markdown to formatted Google Docs. No pandoc."
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Gustavo Camilo" },
]
keywords = ["markdown", "google-docs", "converter", "formatting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Office/Business",
]
dependencies = [
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
]

[project.scripts]
md2gdoc = "md2gdoc.__main__:main"

[project.urls]
Homepage = "https://github.com/gcamilo/md2gdoc"
Issues = "https://github.com/gcamilo/md2gdoc/issues"
